--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.0.4",
     "react": "17.0.0",
     "react-dom": "17.0.0",
-    "react-markdown": "7.1.0"
+    "react-markdown": "7.1.0",
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
