--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.3.1",
     "@prisma/client": "3.5.0",
     "next": "12.0.4",
     "react": "17.0.0",
