--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-markdown": "7.1.0",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
