--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-markdown": "7.1.0",
+    "react-syntax-highlighter": "^15.4.5",
     "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
+    "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/styled-components": "^5.1.15",
     "prisma": "3.5.0",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
