--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-next",
+  "name": "dontpad-next",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -31,8 +31,5 @@
     "prisma": "3.5.0",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
   }
 }
