ci: salvando arquivos com ajuste do prettier - 👷‍♂

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DATABASE_URL="mongodb+srv://jfe:1212@cluster0.q1nmu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
-BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_API_URL="http://localhost:3000"
