--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.3.1",
     "@prisma/client": "3.5.0",
+    "axios": "^0.24.0",
     "next": "12.0.4",
     "react": "17.0.0",
     "react-dom": "17.0.0",
